"""empty message

Revision ID: 5243613708a0
Revises: 
Create Date: 2023-05-12 09:38:40.991463

"""
import sqlalchemy as sa
from alembic import op

# revision identifiers, used by Alembic.
revision = "5243613708a0"
down_revision = None
branch_labels = None
depends_on = None


def upgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table(
        "dummy_model",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("name", sa.String(length=200), nullable=False),
        sa.Column("updated_date", sa.DateTime(), nullable=True),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_table(
        "product",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("created_date", sa.DateTime(), nullable=True),
        sa.Column("updated_date", sa.DateTime(), nullable=True),
        sa.Column("name", sa.String(length=200), nullable=False),
        sa.Column("description", sa.String(length=500), nullable=False),
        sa.Column("item_type", sa.String(length=100), nullable=False),
        sa.Column("category", sa.String(length=250), nullable=False),
        sa.Column("kal", sa.Float(), nullable=False),
        sa.Column("price_value", sa.Float(), nullable=False),
        sa.Column("rate", sa.Float(), nullable=False),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_table(
        "transaction",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("created_date", sa.DateTime(), nullable=True),
        sa.Column("updated_date", sa.DateTime(), nullable=True),
        sa.Column("transaction_date", sa.DateTime(), nullable=False),
        sa.Column("payment_type", sa.String(length=200), nullable=False),
        sa.Column("payment_status", sa.String(length=200), nullable=False),
        sa.Column("value", sa.Float(), nullable=False),
        sa.Column("transaction_reference", sa.String(length=200), nullable=False),
        sa.Column("remark", sa.String(length=500), nullable=False),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_table(
        "op_order",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("created_date", sa.DateTime(), nullable=True),
        sa.Column("updated_date", sa.DateTime(), nullable=True),
        sa.Column("contact_type", sa.String(length=250), nullable=False),
        sa.Column("status", sa.String(length=250), nullable=False),
        sa.Column("deliver_type", sa.String(length=250), nullable=False),
        sa.Column("customer_name", sa.String(length=500), nullable=True),
        sa.Column("customer_contact", sa.Integer(), nullable=True),
        sa.Column("customer_address", sa.String(length=500), nullable=True),
        sa.Column("order_number", sa.Integer(), nullable=False),
        sa.Column("staff", sa.String(length=200), nullable=True),
        sa.Column("fk_transaction", sa.Integer(), nullable=True),
        sa.ForeignKeyConstraint(
            ["fk_transaction"],
            ["transaction.id"],
            name="fk_op_order_transaction_id_transaction",
        ),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_table(
        "order_receipt",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("created_date", sa.DateTime(), nullable=True),
        sa.Column("updated_date", sa.DateTime(), nullable=True),
        sa.Column("contact_type", sa.String(length=250), nullable=False),
        sa.Column("status", sa.String(length=250), nullable=False),
        sa.Column("deliver_type", sa.String(length=250), nullable=False),
        sa.Column("customer_name", sa.String(length=500), nullable=True),
        sa.Column("customer_contact", sa.Integer(), nullable=True),
        sa.Column("customer_address", sa.String(length=500), nullable=True),
        sa.Column("staff", sa.String(length=200), nullable=False),
        sa.Column("remark", sa.String(length=500), nullable=False),
        sa.Column("order_snapshot", sa.JSON(none_as_null=True), nullable=True),
        sa.Column("transaction", sa.Integer(), nullable=True),
        sa.Column("value", sa.Float(), nullable=False),
        sa.ForeignKeyConstraint(
            ["transaction"],
            ["transaction.id"],
            name="fk_order_receipt_transaction_id_transaction",
        ),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_table(
        "production_option",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("created_date", sa.DateTime(), nullable=True),
        sa.Column("updated_date", sa.DateTime(), nullable=True),
        sa.Column("name", sa.String(length=200), nullable=False),
        sa.Column("description", sa.String(length=500), nullable=False),
        sa.Column("extra_charge", sa.Float(), nullable=False),
        sa.Column("option_kind", sa.String(length=200), nullable=False),
        sa.Column("max_count", sa.Integer(), nullable=True),
        sa.Column("min_count", sa.Integer(), nullable=True),
        sa.Column("kal", sa.Float(), nullable=True),
        sa.Column("option_sets", sa.JSON(none_as_null=True), nullable=True),
        sa.Column("fk_options_product", sa.Integer(), nullable=True),
        sa.ForeignKeyConstraint(
            ["fk_options_product"],
            ["product.id"],
            name="fk_production_option_product_id_option_for_product",
        ),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_table(
        "table_appointment",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("created_date", sa.DateTime(), nullable=True),
        sa.Column("updated_date", sa.DateTime(), nullable=True),
        sa.Column("appointment_reference", sa.String(length=120), nullable=False),
        sa.Column("order_number", sa.Integer(), nullable=False),
        sa.Column("customer_name", sa.String(length=500), nullable=False),
        sa.Column("customer_contact", sa.Integer(), nullable=False),
        sa.Column("customer_address", sa.String(length=500), nullable=False),
        sa.Column("people_count", sa.Integer(), nullable=False),
        sa.Column("staff", sa.String(length=200), nullable=False),
        sa.Column("timeslot_start", sa.DateTime(), nullable=False),
        sa.Column("timeslot_end", sa.DateTime(), nullable=False),
        sa.Column("transaction", sa.Integer(), nullable=True),
        sa.ForeignKeyConstraint(
            ["transaction"],
            ["transaction.id"],
            name="fk_table_appointment_transaction_id_transaction",
        ),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_table(
        "ordprod",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("created_date", sa.DateTime(), nullable=True),
        sa.Column("updated_date", sa.DateTime(), nullable=True),
        sa.Column("fk_base_referance_product", sa.Integer(), nullable=False),
        sa.Column("remark", sa.String(length=500), nullable=True),
        sa.Column("fk_order_refer", sa.Integer(), nullable=True),
        sa.ForeignKeyConstraint(
            ["fk_base_referance_product"],
            ["product.id"],
            name="fk_ordprod_product_id_base_referance",
        ),
        sa.ForeignKeyConstraint(
            ["fk_order_refer"], ["op_order.id"], name="fk_ordprod_op_order_id_for_order"
        ),
        sa.PrimaryKeyConstraint("id"),
    )
    op.create_table(
        "ordprodopt",
        sa.Column("id", sa.Integer(), nullable=False),
        sa.Column("created_date", sa.DateTime(), nullable=True),
        sa.Column("updated_date", sa.DateTime(), nullable=True),
        sa.Column("option", sa.String(length=500), nullable=True),
        sa.Column("count", sa.Integer(), nullable=True),
        sa.Column("charge", sa.Float(), nullable=True),
        sa.Column("fk_options_product", sa.Integer(), nullable=False),
        sa.Column("fk_order_product", sa.Integer(), nullable=False),
        sa.ForeignKeyConstraint(
            ["fk_options_product"],
            ["production_option.id"],
            name="fk_ordprodopt_production_option_id_option_referance",
        ),
        sa.ForeignKeyConstraint(
            ["fk_order_product"],
            ["ordprod.id"],
            name="fk_ordprodopt_ordprod_id_order_option_for",
        ),
        sa.PrimaryKeyConstraint("id"),
    )
    # ### end Alembic commands ###


def downgrade() -> None:
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table("ordprodopt")
    op.drop_table("ordprod")
    op.drop_table("table_appointment")
    op.drop_table("production_option")
    op.drop_table("order_receipt")
    op.drop_table("op_order")
    op.drop_table("transaction")
    op.drop_table("product")
    op.drop_table("dummy_model")
    # ### end Alembic commands ###
