classDiagram

  class BaseModel {
    id: int 
    created_time: datetime
    updated_time: datetime
    + save():bool
    + create():bool
    + update():bool
    + delete(): bool
    - snapshot(): bool
  }
  class IOrder {
    customer_address : str
    customer_contact : int
    customer_firstname: str
    customer_lastname : str
    + get_fullname() str
    staff : str
    + total_charge() float
    + request_payment() Transaction
  }
  class Order {
    deliver_type : str
    order_number : int
    order_reference: str
    order_status : str
    order_type : str
    + print_as_kitchan_order() str
    + print_as_receipt() str
    + save_as_receipt_store() str
    ~ snapshot() bool
    + add_items(item: OrderProduct) bool
    + update_item(edited_item: OrderProduct) bool
    + remove_item(target_item: OrderProduct) bool
  }
  
  class OrderProduct {
    quality : int
    remark : str
    + total_charge() float
    + remove_product(quality: int)
    + add_reference(product: Product) void
    + add_extra_options(options: ProductOption) void
    + remove_extra_options(options: ProductOption) void
  }
  class Product {
    item_type : str
    kal : int
    name : str
    price_value : float
    rate : float
    + full_price_value() float
    + is_available() bool
  }
  class ProductOption {
    extra_charge : float
    max_count : int
    min_count : int
    name : str
    option_kind : str
  }
  class TableAppointment {
    appointment_reference : str
    people_count : int
    timeslot : datetime
  }
  class Transaction {
    payment_status : str
    payment_type : str
    transaction_date : datetime
    value : float
    + handle_payment(payment_type: str) bool
  }

  BaseModel <|-- Order
  BaseModel <|-- OrderProduct
  BaseModel <|-- Product
  BaseModel <|-- ProductOption
  BaseModel <|-- Transaction
  BaseModel <|-- TableAppointment

  IOrder <|-- Order
  IOrder <|-- TableAppointment
  IOrder "1" --> "0..1" Transaction : has

  Order "1" --> "*"  OrderProduct : has

  OrderProduct "1" *-- "1" Product : base_reference_to
  OrderProduct "1" o-- "0..1" ProductOption : extra_options
  Product "1" o-- "0..*" ProductOption : available_options
 